refactor: grouping the arch
